removed .git-keep file

--- a/github/github-foundations/intro-to-git/cats/index.html
+++ b/github/github-foundations/intro-to-git/cats/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" >
         <title>Our Furry Friends</title>
-        <link rel="stylesheet" href="css/site.css"
+        <link rel="stylesheet" href="css/site.css">
     </head>
     <body>
         <h1>Our Furry Friends</h1>
